# CS267_HW3

./: CMakeLists.txt  README.md  check_it.sh  hash_map.hpp  job-human-kmer51  job-human-kmer51-serial  job-kmer19-serial  kmer_hash.cpp  results_parallel_kmer19.txt  results_parallel_kmer51.txt  results_serial.txt  setup_human_data.sh  work_it.sh
docker/: Dockerfile  build_image.sh  entrypoint.sh  install_container_toolkit.sh  interactive.sh
results/: results_parallel_kmer19_w_60_64tasks.txt  results_parallel_kmer51_w_60_64tasks.txt  results_serial.txt  results_serial_kmer19.txt  results_serial_kmer51.txt
scripts/: assembly_time_vs_contigs.py  filesize_vs_contig.py  job-kmer19-parallel  kmer19_performance.py  kmer19_speedup.py  kmer19_speedup_vs_nodes.py  kmer51_performance.py  kmer51_speedup.py  kmer51_speedup_vs_nodes.py  setstripe.sh
test/: CMakeLists.txt  README.md  distributed_hash.hpp  distributed_hashmap.hpp  distributed_hashmap_test.cpp  run_it.sh
